# KnowledgeAssistantAI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ai_basics.txt  langchain_rag.txt  python_basics.txt
src/: app.py  ingest.py  llmops.py  mcp_server.py  tools.py
