[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-assistant-ai"
version = "1.0.0"
description = "A complete AI project covering LangChain, RAG, AI Agents, MCP, and LLMOps"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-text-splitters",
    "langchain-ollama",
    "langchain-anthropic",
    "langchain-chroma",
    "chromadb",
    "streamlit",
    "python-dotenv",
    "faiss-cpu",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
python_version = "311"
